--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -35,6 +35,13 @@
 			<artifactId>jol-core</artifactId>
 			<version>0.9</version>
 		</dependency>
+		
+		<!-- redis 分布式锁 -->
+		<dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.10.2</version>
+        </dependency>
 	</dependencies>
 
 	<build>
