--- a/disruptor-demo/pom.xml
+++ b/disruptor-demo/pom.xml
@@ -29,10 +29,15 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<!-- 		<dependency>
 			<groupId>com.lmax</groupId>
 			<artifactId>disruptor</artifactId>
 			<version>3.3.2</version>
+		</dependency> -->
+		<dependency>
+			<groupId>com.lmax</groupId>
+			<artifactId>disruptor-source</artifactId>
+		    <version>3.4.3</version>
 		</dependency>
 	</dependencies>
 
