--- a/stream-hello/pom.xml
+++ b/stream-hello/pom.xml
@@ -43,6 +43,12 @@
 			<artifactId>spring-cloud-stream-test-support</artifactId>
 			<scope>test</scope>
 		</dependency>
+		
+<!-- 		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>1.2.41</version>
+		</dependency> -->
 	</dependencies>
 
 	<dependencyManagement>
