--- a/stream-hello/src/main/resources/application.properties
+++ b/stream-hello/src/main/resources/application.properties
@@ -1,2 +1,2 @@
-spring.cloud.stream.bindings.input.destination=test
-spring.cloud.stream.bindings.output.destination=test
+#spring.cloud.stream.bindings.input.destination=test
+#spring.cloud.stream.bindings.output.destination=test
