--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -42,6 +42,11 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.10.2</version>
         </dependency>
+		<dependency>
+			<groupId>com.itranswarp</groupId>
+			<artifactId>compiler</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
