--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -70,6 +70,16 @@
 		    <artifactId>wsdl4j</artifactId>
 		</dependency>
 		
+		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j-impl -->
+		<dependency>
+		    <groupId>org.apache.logging.log4j</groupId>
+		    <artifactId>log4j-slf4j-impl</artifactId>
+		</dependency>
+		<dependency>                    
+		    <groupId>org.apache.httpcomponents</groupId>
+		    <artifactId>httpclient</artifactId>
+		</dependency>
+
 		
 	</dependencies>
 
